[package]
authors = ["Miri Team"]
description = "dependencies that unit tests can have"
license = "MIT OR Apache-2.0"
name = "miri-test-deps"
repository = "https://github.com/rust-lang/miri"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"

[workspace]
